# remux

./: .gitignore  Cargo.toml  README.md  spec.md
.github/workflows/: ci.yml
crates/remux-authz/: Cargo.toml
crates/remux-authz/src/: config.rs  jwt.rs  lib.rs  mtls.rs  permission.rs  policy.rs  principal.rs  token_store.rs
crates/remux-authz/testdata/: rsa_modulus.b64url  rsa_priv.pem  rsa_pub.pem
crates/remux-cli/: Cargo.toml
crates/remux-cli/src/: client.rs  daemon_spawn.rs  exit.rs  lib.rs  main.rs  raw_mode.rs  render.rs  render_snapshot.rs
crates/remux-cli/src/cmd/: attach.rs  bridge.rs  completions.rs  fleet.rs  inspect.rs  kill.rs  logs.rs  ls.rs  mod.rs  mod_fleet.rs  new.rs  open.rs  peek.rs  rename.rs  send.rs  wait.rs
crates/remux-cli/tests/: bridge.rs  fleet.rs
crates/remux-control-plane/: Cargo.toml
crates/remux-control-plane/src/: app.rs  auth.rs  client.rs  lib.rs  main.rs  registry.rs  server.rs  tls.rs
crates/remux-control-plane/tests/: federation_e2e.rs  jwt_e2e.rs  mtls_e2e.rs  pinning_e2e.rs
crates/remux-control-plane/tests/common/: mod.rs
crates/remux-core/: Cargo.toml
crates/remux-core/src/: config.rs  error.rs  framing.rs  lib.rs  protocol.rs  session.rs  terminal.rs
crates/remux-daemon/: Cargo.toml
crates/remux-daemon/src/: daemon.rs  main.rs  persistence.rs  pty.rs  scrollback.rs  session_manager.rs  vt.rs
crates/remux-gateway/: Cargo.toml
crates/remux-gateway/src/: app.rs  auth.rs  daemon_conn.rs  error.rs  jwt_service.rs  lib.rs  main.rs  mtls.rs  peer_tls.rs  register.rs  selector.rs  server.rs  tls.rs  web.rs  ws.rs
crates/remux-gateway/src/api/: mod.rs
crates/remux-gateway/src/api/v1/: convert.rs  dto.rs  mod.rs  openapi.rs
crates/remux-gateway/tests/: audit_e2e.rs  daemon_conn_e2e.rs  http_e2e.rs  jwt_e2e.rs  mtls_e2e.rs  openapi.rs  register_e2e.rs  register_pinning_e2e.rs  scopes_e2e.rs  web_ui_e2e.rs  ws_e2e.rs
crates/remux-gateway/tests/common/: mod.rs
crates/remux-gateway/web/: app.js  index.html  style.css
crates/remux-testkit/: Cargo.toml
crates/remux-testkit/src/: client.rs  lib.rs
crates/remux-testkit/tests/: integration.rs
crates/remux-tui/: Cargo.toml
crates/remux-tui/src/: app.rs  client.rs  lib.rs  main.rs  tui.rs  ui.rs
docs/: AGENT_API_PLAN.md  ROBUSTNESS_PLAN.md  openapi.yaml
docs/specs/: review-specmd-and-lets-plan-this-entire-peoject-out-progress.txt  review-specmd-and-lets-plan-this-entire-peoject-out.json  review-specmd-and-lets-plan-this-entire-peoject-out.md
packaging/: com.remux.daemon.plist  install.sh  remuxd.service
