[package]
name = "remux-authz"
version = "0.1.0"
edition = "2021"
description = "Shared principal + RBAC authorization model for Remux's network layer (gateway + control plane): fine-grained permissions, roles, policies, principals, and a constant-time token store"

[lib]
name = "remux_authz"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
