[package]
name = "remux-authz"
version = "0.1.0"
edition = "2021"
description = "Shared principal + RBAC authorization model for Remux's network layer (gateway + control plane): fine-grained permissions, roles, policies, principals, and a constant-time token store"

[lib]
name = "remux_authz"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs", "pem", "use_pem"] }
serde_json = "1"

[dev-dependencies]
