[package]
name = "remux-cli"
version = "0.1.0"
edition = "2021"
description = "Remux CLI client"

[lib]
name = "remux_cli"
path = "src/lib.rs"

[[bin]]
name = "remux"
path = "src/main.rs"

[dependencies]
remux-core = { path = "../remux-core" }
remux-tui = { path = "../remux-tui" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
crossterm = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
libc = "0.2"
regex = "1"

[dev-dependencies]
remux-testkit = { path = "../remux-testkit" }
tempfile = "3"
