[package]
name = "remux-control-plane"
version = "0.1.0"
edition = "2021"
description = "AW6 federation control plane for remux: outbound host registry, federated fleet API, and intent-based session routing over TLS"

[[bin]]
name = "remux-control-plane"
path = "src/main.rs"

[lib]
name = "remux_control_plane"
path = "src/lib.rs"

[dependencies]
# Reuse the gateway's public /v1 DTO types (SessionView, CreateSessionBody, ...).
remux-gateway = { path = "../remux-gateway" }
remux-core = { path = "../remux-core" }
remux-authz = { path = "../remux-authz" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

# HTTP/WS server, TLS, outbound HTTP client, CLI, logging.
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
remux-testkit = { path = "../remux-testkit" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs", "pem", "use_pem"] }
serde_json = "1"
