[package]
name = "remux-gateway"
version = "0.1.0"
edition = "2021"
description = "Versioned public /v1 API contract, DaemonConn adapter, and TLS REST+WebSocket server for Remux (AW0/AW2/AW3/AW4)"

[[bin]]
name = "remux-gateway"
path = "src/main.rs"

[lib]
name = "remux_gateway"
path = "src/lib.rs"

[dependencies]
remux-core = { path = "../remux-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }

# AW2/AW3/AW4: HTTP/WS server, TLS, CLI, logging.
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rcgen = "0.13"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
futures-util = "0.3"

[dev-dependencies]
remux-testkit = { path = "../remux-testkit" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
